--- a/index.html
+++ b/index.html
@@ -10,13 +10,17 @@
 </head>
 <body>
     <div class="modal">
-        <div >Grid size (1-100) <input> <span> </span></div>
-        <button id="clear">Clear</button>
-        <button id="set-grid">Set Grid</button>
+        <div id="input">Grid size (1-100) <input> <span> </span></div>
 
-        <div>
-            <button class="color" id="shade">Shade</button>
-            <button class="color" id="rainbow">Rainbow</button>
+        <div id="grid-settings">
+            <button id="clear">Clear</button>
+            <button id="set-grid">Set Grid</button>
+        </div>
+        
+
+        <div class="color">
+            <button id="shade">Shade</button>
+            <button id="rainbow">Rainbow</button>
         </div>
 
 
